--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,8 +5,9 @@
     <title>Example App</title>
 </head>
 <body>
-
 {{{body}}}
-
+<script async defer>
+    (function(){var link=document.createElement("link");link.type="text/css";link.rel="stylesheet";link.href="/dist/app.css";document.head.appendChild(link);}());
+</script>
 </body>
 </html>
