--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,10 @@
-<h1>home {{ foo }}</h1>
+<div class="container">
+    <h1>Welcome to news API v 1.0</h1>
+    {{ user }}
+
+    {{#unless foo}}
+        {{> user/register }}
+    {{/unless}}
+
+    {{> user/login }}
+</div>
