--- a/views/partials/user/login.hbs
+++ b/views/partials/user/login.hbs
@@ -1,1 +1,13 @@
-<h2>login</h2>
+<form>
+    <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Password">
+        <small id="passwordHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
