--- a/views/partials/user/register.hbs
+++ b/views/partials/user/register.hbs
@@ -1,1 +1,23 @@
-<h2>register</h2>
+<form>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="email">Email</label>
+            <input type="email" name="email" class="form-control" id="email" placeholder="adresse email">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pseudo">Pseudo</label>
+        <input type="text" name="pseudo" class="form-control" id="pseudo" placeholder="Pseudo">
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="password">Password</label>
+            <input type="text" name="password" class="form-control" id="password">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="passwordV">Password</label>
+            <input type="text" name="passwordV" class="form-control" id="passwordV">
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
+</form>
