--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,172 @@
+<h1>Welcome to news API v 1.0</h1>
+
 <div class="container">
-    <h1>Welcome to news API v 1.0</h1>
-    {{ user }}
-
-    {{#unless foo}}
-        {{> user/register }}
-    {{/unless}}
-
-    {{> user/login }}
+    <h6>Register</h6>
+    {{> user/register }} <br>
+    <h6>Login</h6>
+    {{> user/login }} <br>
+    {{> search }}
 </div>
+
+<script>
+    window.addEventListener('DOMContentLoaded', function (e) {
+        const sources = ["ABC News (AU)", "Aftenposten", "Al Jazeera English", "ANSA.it", "Argaam",
+            "Ars Technica", "Ary News", "Associated Press", "Australian Financial Review", "Axios",
+            "BBC News","BBC Sport","Bild","Blasting News (BR)","Bleacher Report","Bloomberg","Breitbart News",
+            "Business Insider","Business Insider (UK)","Buzzfeed","CBC News","CBS News","CNBC","CNN","CNN Spanish",
+            "Crypto Coins News","Der Tagesspiegel","Die Zeit","El Mundo","Engadget","Entertainment Weekly","ESPN",
+            "ESPN Cric Info","Financial Post","Focus","Football Italia","Fortune","FourFourTwo","Fox News","Fox Sports",
+            "Globo","Google News","Google News (Argentina)","Google News (Australia)","Google News (Brasil)",
+            "Google News (Canada)","Google News (France)","Google News (India)","Google News (Israel)",
+            "Google News (Italy)","Google News (Russia)","Google News (Saudi Arabia)","Google News (UK)",
+            "Göteborgs-Posten","Gruenderszene","Hacker News","Handelsblatt","IGN","Il Sole 24 Ore","Independent",
+            "Infobae","InfoMoney","La Gaceta","La Nacion","La Repubblica","Le Monde","Lenta","L'equipe","Les Echos",
+            "Libération","Marca","Mashable","Medical News Today","MSNBC","MTV News","MTV News (UK)","National Geographic",
+            "National Review","NBC News","News24","New Scientist","News.com.au","Newsweek","New York Magazine","Next Big Future",
+            "NFL News","NHL News","NRK","Politico","Polygon","RBC","Recode","Reddit /r/all","Reuters","RT","RTE","RTL Nieuws","SABQ",
+            "Spiegel Online","Svenska Dagbladet","T3n","TalkSport",
+            "TechCrunch","TechCrunch (CN)","TechRadar","The American Conservative","The Globe And Mail","The Hill","The Hindu","The Huffington Post","The Irish Times",
+            "The Jerusalem Post","The Lad Bible","The Next Web","The Sport Bible","The Times of India","The Verge","The Wall Street Journal","The Washington Post",
+            "The Washington Times","Time","USA Today","Vice News","Wired","Wired.de","Wirtschafts Woche","Xinhua Net","Ynet"
+        ];
+
+        // form
+        const loginForm = document.forms.loginForm;
+        const registerForm = document.forms.registerForm;
+        const searchForm = document.forms.searchForm;
+
+        // let loginData = {
+        //     'login' : loginForm.elements['login'].value,
+        //     'password' : loginForm.elements['password'].value,
+        // };
+        //
+        // let registerData = {
+        //     'login' : registerForm.elements['login'].value,
+        //     'password' : registerForm.elements['password'].value,
+        //     'pseudo' : registerForm.elements['pseudo'].value
+        // };
+        //
+        // let searchData = {
+        //     'requestLanguage' : 'fr',
+        //     'requestSource' : searchForm.elements['sourceSelection'].selectedIndex,
+        //     'requestQuery' : searchForm.elements['q'].value
+        // };
+
+        function addToBucket(index=null, sources) {
+            // searchForm.elements['sourceSelection'].selectedIndex
+            if(index){
+                if(sources.indexOf(index) !== -1){
+                    let indexToAdd = index;
+                    //...
+                }
+            }
+        }
+
+        function getUserData(uri, token) {
+            if(token && uri){
+                customFetch('GET', {
+                    token,
+                    uri
+                }).then(function (user) {
+                    if(user.error)
+                        return user;
+                    console.log(user);
+                    return user;
+                });
+            }
+        }
+
+        function getConnexion(url, data, logout = false) {
+            if(url){
+                customFetch('POST', {
+                    uri : url,
+                    body: data
+                }).then(function(data){
+                    if(data.error)
+                        return data;
+                    if(data.auth){
+                        getUserData('http://localhost:3888/api/auth/user', data.token);
+                    }
+                });
+            }
+        }
+
+        function getCookie(name) {
+            let pos = document.cookie.indexOf(name + '=');
+            console.log(document.cookie);
+            if(pos !== -1){
+                let pos2 = document.cookie.indexOf(';', pos);
+                if(pos2){
+                    return unescape(document.cookie.substring(pos + name.length + 1));
+                }else{
+                    return unescape(document.cookie.substring(pos + name.length + 1, pos2));
+                }
+            }
+        }
+
+        function logout() {
+            // let date = new Date(Date.now());
+            // date = date.toUTCString();
+            document.cookie = 'user_auth_status='+ getCookie('user_auth_status') +'; path=/; max-age=0';
+        }
+
+        //logout();
+        //getCookie('user_auth_status');
+
+        function customFetch(method, options) {
+            let myHeaders = new Headers();
+
+            let myInit = {
+                method: method,
+                mode: 'cors',
+                cache: 'default'
+            };
+
+            if(options.token){
+                myHeaders.set('x-access-token', options.token);
+            }
+
+            if(options.body){
+                myHeaders.append('Content-Type', 'application/x-www-form-urlencoded');
+                myInit.body = 'email=' + options.body.email + '&password=' + options.body.password ; // new FormData(document.getElementById('login-form'))
+                myHeaders.append('Content-Length', myInit.body.length);
+            }
+
+            myInit.headers = myHeaders;
+
+            var myRequest = new Request(options.uri , myInit);
+
+            return fetch(myRequest)
+                .then(function(response) {
+                    if(!response.ok){
+                        return {error : true};
+                    }else{
+                        return response.json().then(function(json) {
+                            return json;
+                        });
+                    }
+                })
+                .catch(function(error) {
+                    return console.log('Il y a eu un problème avec l\'opération fetch: ' + error.message);
+                });
+        }
+
+        let user = getConnexion('http://localhost:3888/api/auth/login', {
+            email: 'faycal.toure@gmail.com',
+            password: 'toto'
+        });
+
+        //getCookie('user_auth_status');
+
+        //logout();
+
+        //
+        //
+        // let timer = window.setTimeout(function () {
+        //     logout();
+        //     getCookie('user_auth_status');
+        //     window.clearTimeout(timer);
+        // }, 10000);
+
+    });
+</script>
