--- a/views/partials/user/login.hbs
+++ b/views/partials/user/login.hbs
@@ -1,13 +1,12 @@
 <form name="loginForm">
+    <h6>Login</h6>
     <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Password">
-        <small id="passwordHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <input type="password" name="password" class="form-control" id="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    <button type="submit" onclick="this.disable = true;" class="btn btn-primary submit-btn">Sign in</button>
 </form>
