--- a/views/partials/user/register.hbs
+++ b/views/partials/user/register.hbs
@@ -1,4 +1,5 @@
 <form name="registerForm">
+    <h6>Register</h6>
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="email">Email</label>
@@ -14,10 +15,6 @@
             <label for="password">Password</label>
             <input type="text" name="password" class="form-control" id="password">
         </div>
-        <div class="form-group col-md-6">
-            <label for="passwordV">Password</label>
-            <input type="text" name="passwordV" class="form-control" id="passwordV">
-        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary submit-btn">Register</button>
 </form>
