--- a/views/partials/user/login.hbs
+++ b/views/partials/user/login.hbs
@@ -1,12 +1,12 @@
 <form name="loginForm">
     <h6>Login</h6>
     <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+        <label for="loginFormEmail">Email address</label>
+        <input type="email" name="email" class="form-control" id="loginFormEmail" placeholder="Enter email">
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+        <label for="loginFormPassword">Password</label>
+        <input type="password" name="password" class="form-control" id="loginFormPassword" placeholder="Password">
     </div>
     <button type="submit" onclick="this.disable = true;" class="btn btn-primary submit-btn">Sign in</button>
 </form>
