--- a/views/partials/user/register.hbs
+++ b/views/partials/user/register.hbs
@@ -2,8 +2,8 @@
     <h6>Register</h6>
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="email">Email</label>
-            <input type="email" name="email" class="form-control" id="email" placeholder="adresse email">
+            <label for="registerFormEmail">Email</label>
+            <input type="email" name="email" class="form-control" id="registerFormEmail" placeholder="adresse email">
         </div>
     </div>
     <div class="form-group">
@@ -12,8 +12,8 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="password">Password</label>
-            <input type="text" name="password" class="form-control" id="password">
+            <label for="registerFormPassword">Password</label>
+            <input type="text" name="password" class="form-control" id="registerFormPassword">
         </div>
     </div>
     <button type="submit" class="btn btn-primary submit-btn">Register</button>
