--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -2,7 +2,7 @@
 <form name="searchForm">
     <div class="form-group">
         <label for="searchFormRequestQuery">Email address</label>
-        <input type="text" name="requestQuery" class="form-control" id="searchFormRequestQuery" placeholder="name@example.com">
+        <input type="text" name="requestQuery" class="form-control" id="searchFormRequestQuery" placeholder="query">
     </div>
     <div class="form-group">
         <label for="searchFormRequestSource">Example select</label>
