--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -10,3 +10,5 @@
     </div>
     <button type="submit" onclick="this.disable = true;" class="btn btn-primary submit-btn">Search</button>
 </form>
+
+<ul id="articles"></ul>
