--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,6 +33,7 @@
         const loginForm = document.forms.loginForm;
         const registerForm = document.forms.registerForm;
         const searchForm = document.forms.searchForm;
+        const disconnectBtn = document.getElementById('disconnect');
 
         const searcSelectBox = searchForm.elements['requestSource'];
 
@@ -49,9 +50,11 @@
         if(isLogged()){
             loginForm.style.display = 'none';
             registerForm.style.display = 'none';
+            disconnectBtn.style.display = 'block';
         }else{
             loginForm.style.display = 'block';
             registerForm.style.display = 'block';
+            disconnectBtn.style.display = 'none';
         }
 
         for (let i = 0; i < document.forms.length; i++){
@@ -65,6 +68,7 @@
                             email: formData.get('email'),
                             password: formData.get('password')
                         });
+                        window.location.reload();
                     }
                     if(document.forms[i].name === 'registerForm'){
                         console.log('register');
@@ -81,6 +85,15 @@
                             if(data.error)
                                 return data;
                             console.log(data);
+                            if(data.status === 'ok' && data.articles.length > 0){
+                                let list = document.getElementById('articles');
+                                for(let i = 0; i < data.articles.length; i++){
+                                    let li = document.createElement('li');
+                                    let content = document.createTextNode(data.articles[i].description);
+                                    li.appendChild(content);
+                                    list.appendChild(li);
+                                }
+                            }
                         });
                     }
                 }
@@ -162,6 +175,7 @@
 
         function logout() {
             document.cookie = 'user_auth_status='+ getCookie('user_auth_status') +'; path=/; max-age=0';
+            window.location.reload();
         }
 
 
@@ -210,7 +224,6 @@
         }
 
         // Disconnect
-        const disconnectBtn = document.getElementById('disconnect');
         disconnectBtn.addEventListener('click', function (e) {
             logout();
             //getCookie('user_auth_status') => undifined
