--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -11,4 +11,4 @@
     <button type="submit" onclick="this.disable = true;" class="btn btn-primary submit-btn">Search</button>
 </form>
 
-<ul id="articles"></ul>
+<ul id="articles" class="row my-5"></ul>
