--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -1,11 +1,11 @@
 
 <form name="searchForm">
     <div class="form-group">
-        <label for="searchFormRequestQuery">Email address</label>
+        <label for="searchFormRequestQuery">Search</label>
         <input type="text" name="requestQuery" class="form-control" id="searchFormRequestQuery" placeholder="query">
     </div>
     <div class="form-group">
-        <label for="searchFormRequestSource">Example select</label>
+        <label for="searchFormRequestSource">Source</label>
         <select class="form-control" name="requestSource" id="searchFormRequestSource"></select>
     </div>
     <button type="submit" onclick="this.disable = true;" class="btn btn-primary submit-btn">Search</button>
