--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+<style>
+    .card-item + .card-item {
+        margin-left: 15px !important;
+    }
+
+    .card-item {
+        list-style-type: none !important;
+    }
+</style>
 {{{body}}}
 <script async defer>
     (function(){var link=document.createElement("link");link.type="text/css";link.rel="stylesheet";link.href="/dist/app.css";document.head.appendChild(link);}());
