--- a/views/partials/user/register.hbs
+++ b/views/partials/user/register.hbs
@@ -1,17 +1,19 @@
 <form name="registerForm">
     <h6>Register</h6>
     <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-12">
             <label for="registerFormEmail">Email</label>
             <input type="email" name="email" class="form-control" id="registerFormEmail" placeholder="adresse email">
         </div>
     </div>
-    <div class="form-group">
-        <label for="pseudo">Pseudo</label>
-        <input type="text" name="pseudo" class="form-control" id="pseudo" placeholder="Pseudo">
+    <div class="form-row">
+        <div class="form-group col-12">
+            <label for="pseudo">Pseudo</label>
+            <input type="text" name="pseudo" class="form-control" id="pseudo" placeholder="Pseudo">
+        </div>
     </div>
     <div class="form-row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-12">
             <label for="registerFormPassword">Password</label>
             <input type="text" name="password" class="form-control" id="registerFormPassword">
         </div>
