--- a/views/home.hbs
+++ b/views/home.hbs
@@ -200,7 +200,7 @@
                                               <div class="card-body">
                                                 <h5 class="card-title">${fetched.title}</h5>
                                                 <p class="card-text">${fetched.description}</p>
-                                                <a href="${fetched.url}" class="btn btn-primary">Go somewhere</a>
+                                                <a href="${fetched.url}" class="btn btn-primary">Learn more</a>
                                               </div>
                                             </div>
                                         </li>
